# fse-techincal-challenge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/models/: responses.py
backend/app/pipeline/: orchestrator.py
backend/app/routes/: routes.py
backend/app/services/: data_service.py  openai_service.py
backend/data/: articles.json
docs/: IMPLEMENTATION.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AnalysisForm.tsx  AnalysisResult.tsx
frontend/components/analysis/: ContextCard.tsx  DetailCard.tsx  EmotionCard.tsx  EvidenceCard.tsx  PieChart.tsx  RiskCard.tsx  SignalBreakdownCard.tsx
frontend/lib/: api.ts
