[project]
name = "article-reputation-analyzer"
version = "0.1.0"
description = "FSE technical challenge — article reputation analysis backend"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "openai>=2.21.0",
    "pydantic>=2",
    "pydantic-settings>=2.13.0",
    "python-dateutil>=2.9.0.post0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
